--- a/Flask_notes/Inheritance_Jinja_example/base.html
+++ b/Flask_notes/Inheritance_Jinja_example/base.html
@@ -1,1 +1,11 @@
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ title or "Todos" }}</title>
+</head>
+<body>
+    {% block content %}
+    {% endblock %}
+</body>
+</html>
