--- a/Flask_notes/Inheritance_Jinja_example/home.html
+++ b/Flask_notes/Inheritance_Jinja_example/home.html
@@ -1,1 +1,13 @@
+{% extends 'base.html' %}
+{% import 'macros.jinja2' as macros %}
 
+{% block content %}
+    {% set num_todos = todos | length %}
+
+    {% if num_todos > 0 %}
+        <p>You have {{ num_todos }} left to do today.</p>
+        {{ todo_macros.todo_list(todos) }}
+    {% else %}
+        <p>You have nothing to do today! Relax!</p>
+    {% endif %}
+{% endblock %}
