--- a/Flask_notes/Inheritance_Jinja_example/base.html
+++ b/Flask_notes/Inheritance_Jinja_example/base.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title or "Todos" }}</title>
+    {% block head %}
+    {% endblock %}
+
 </head>
 <body>
     {% block content %}
