--- a/Flask_notes/Inheritance_Jinja_example/home.html
+++ b/Flask_notes/Inheritance_Jinja_example/home.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% import 'macros.jinja2' as macros %}
 
+{% block head %}
+<style>
+    
+</style>
+{% endblock %}
+
 {% block content %}
     {% set num_todos = todos | length %}
 
