--- a/Flask_notes/Inheritance_Jinja_example/not-found.html
+++ b/Flask_notes/Inheritance_Jinja_example/not-found.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% import 'macros.jinja2' as macros %}
 
+{% block head %}
+<style>
+    
+</style>
+{% endblock %}
+
 {% block content %}
     <h1>Not found</h1>
     <p>We're sorry, that todo item was not found:</p>
