--- a/Flask_notes/Inheritance_Jinja_example/todo.html
+++ b/Flask_notes/Inheritance_Jinja_example/todo.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% block head %}
+<style>
+    
+</style>
+{% endblock %}
+
 {% block content %}
     <h1>{{ text }}</h1>
 
