--- a/Flask_notes/Inheritance_Jinja_example/not-found.html
+++ b/Flask_notes/Inheritance_Jinja_example/not-found.html
@@ -3,12 +3,15 @@
 
 {% block head %}
 <style>
-    
+    .not_found {
+        background-color: gray;
+        font-size: 125%
+    }
 </style>
 {% endblock %}
 
 {% block content %}
     <h1>Not found</h1>
     <p>We're sorry, that todo item was not found:</p>
-    <p>{{ text }}</p>
+    <p class="not_found">{{ text }}</p>
 {% endblock %}
