--- a/Flask_notes/Inheritance_Jinja_example/todo.html
+++ b/Flask_notes/Inheritance_Jinja_example/todo.html
@@ -1,9 +1,30 @@
 {% extends 'base.html' %}
 
 {% block head %}
+{% if completed %}
 <style>
+    p{
+        margin: 8px 16px;
+        background-color: aquamarine;
+        padding:12px 24px;
+        border: 1px solid black;
+        border-radius: 4px;        
+    }
     
 </style>
+{% else %}
+<style>
+    p{
+        margin: 8px 16px;
+        background-color: darkred;
+        color: white;
+        padding:12px 24px;
+        border: 1px solid black;
+        border-radius: 4px;         
+    }
+</style>
+
+{% endif %}
 {% endblock %}
 
 {% block content %}
